--- a/conf/motion.conf
+++ b/conf/motion.conf
@@ -8,7 +8,7 @@
 ############################################################
 
 # Start in daemon (background) mode and release terminal (default: off)
-daemon off
+daemon on
 
 # File to store the process ID, also called pid file. (default: not defined)
 process_id_file /var/run/motion/motion.pid
@@ -19,7 +19,6 @@ process_id_file /var/run/motion/motion.pid
 
 # Start in Setup-Mode, daemon disabled. (default: off)
 setup_mode off
-
 
 # Use a file to save logs messages, if not defined stderr and syslog is used. (default: not defined)
 logfile /var/log/motion/motion.log
@@ -35,7 +34,6 @@ log_type all
 ############################################################
 
 # Videodevice to be used for capturing  (default /dev/video0)
-# for FreeBSD default is /dev/bktr0
 videodevice /dev/video0
 
 # v4l2_palette allows one to choose preferable palette to be use by motion
@@ -84,7 +82,7 @@ norm 0
 frequency 0
 
 # Override the power line frequency for the webcam. (normally not necessary)
-# Values: 
+# Values:
 # -1 : Do not modify device setting
 # 0  : Power line frequency Disabled
 # 1  : 50hz
@@ -104,7 +102,7 @@ height 240
 
 # Maximum number of frames to be captured per second.
 # Valid range: 2-100. Default: 100 (almost no limit).
-framerate 2
+framerate 1
 
 # Minimum time in seconds between capturing picture frames from the camera.
 # Default: 0 = disabled - the capture rate is given by the camera framerate.
@@ -172,7 +170,6 @@ saturation 0
 # Valid range 0-255, default 0 = disabled
 hue 0
 
-
 ############################################################
 # Round Robin (multiple inputs on same video device name)
 ############################################################
@@ -232,17 +229,17 @@ lightswitch 0
 # Picture frames must contain motion at least the specified number of frames
 # in a row before they are detected as true motion. At the default of 1, all
 # motion is detected. Valid range: 1 to thousands, recommended 1-5
-minimum_motion_frames 1
+minimum_motion_frames 3
 
 # Specifies the number of pre-captured (buffered) pictures from before motion
 # was detected that will be output at motion detection.
 # Recommended range: 0 to 5 (default: 0)
 # Do not use large values! Large values will cause Motion to skip video frames and
 # cause unsmooth movies. To smooth movies use larger values of post_capture instead.
-pre_capture 0
+pre_capture 2
 
 # Number of frames to capture after motion is no longer detected (default: 0)
-post_capture 0
+post_capture 1
 
 # Event Gap is the seconds of no motion detection that triggers the end of an event.
 # An event is defined as a series of motion images taken within a short timeframe.
@@ -290,7 +287,7 @@ picture_type jpeg
 ############################################################
 
 # Use ffmpeg to encode movies in realtime (default: off)
-ffmpeg_output_movies on
+ffmpeg_output_movies off
 
 # Use ffmpeg to make movies with only the pixels moving
 # object (ghost images) (default: off)
@@ -335,7 +332,7 @@ ffmpeg_variable_bitrate 0
 # hevc - H.265 / HEVC (High Efficiency Video Coding)
 ffmpeg_video_codec mpeg4
 
-# When creating videos, should frames be duplicated in order 
+# When creating videos, should frames be duplicated in order
 # to keep up with the requested frames per second
 # (default: true)
 ffmpeg_duplicate_frames true
@@ -447,7 +444,7 @@ text_double off
 
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
-target_dir /var/lib/motion
+# target_dir /var/lib/motion
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
@@ -488,7 +485,8 @@ ipv6_enabled off
 ############################################################
 
 # The mini-http server listens to this port for requests (default: 0 = disabled)
-stream_port 8081
+# stream_port 8081
+stream_port 0
 
 # Quality of the jpeg (in percent) images produced (default: 50)
 stream_quality 50
@@ -531,7 +529,8 @@ stream_auth_method 0
 ############################################################
 
 # TCP/IP port for the http server to listen on (default: 0 = disabled)
-webcontrol_port 8080
+# webcontrol_port 8080
+webcontrol_port 0
 
 # Restrict control connections to localhost only (default: on)
 webcontrol_localhost on
