--- a/conf/motion.conf
+++ b/conf/motion.conf
@@ -445,6 +445,7 @@ text_double off
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
 # target_dir /var/lib/motion
+target_dir /home/pi/Documents/secout
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
