got it mostly working for now; weekend time now though.

--- a/conf/motion.conf
+++ b/conf/motion.conf
@@ -107,7 +107,7 @@ framerate 1
 # Minimum time in seconds between capturing picture frames from the camera.
 # Default: 0 = disabled - the capture rate is given by the camera framerate.
 # This option is used when you want to capture images at a rate lower than 2 per second.
-minimum_frame_time 0
+minimum_frame_time .5
 
 # URL to use if you are using a network camera, size will be autodetected (incl http:// ftp:// mjpg:// rtsp:// mjpeg:// or file:///)
 # Must be a URL that returns single jpeg pictures or a raw mjpeg stream. A trailing slash may be required for some cameras.
@@ -445,7 +445,7 @@ text_double off
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
 # target_dir /var/lib/motion
-target_dir /home/pi/Documents/secout
+target_dir /home/pi/Documents/secout/
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
@@ -636,15 +636,15 @@ quiet on
 
 # Command to be executed when an event starts. (default: none)
 # An event starts at first motion detected after a period of no motion defined by event_gap
-; on_event_start value
+on_event_start rm /tmp/rclone_running
 
 # Command to be executed when an event ends after a period of no motion
 # (default: none). The period of no motion is defined by option event_gap.
-; on_event_end value
+on_event_end rm /tmp/rclone_running ; sudo -u pi /bin/bash /home/pi/Documents/wintermute/scripts/rclone_lock.sh
 
 # Command to be executed when a picture (.ppm|.jpg) is saved (default: none)
 # To give the filename as an argument to a command append it with %f
-; on_picture_save value
+on_picture_save sudo -u pi /bin/bash /home/pi/Documents/wintermute/scripts/rclone_lock.sh
 
 # Command to be executed when a motion frame is detected (default: none)
 ; on_motion_detected value
