--- a/conf/motion.conf
+++ b/conf/motion.conf
@@ -440,7 +440,7 @@ text_double off
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
 # target_dir /var/lib/motion
-target_dir /home/pi/Documents/secout/
+target_dir /home/pi/Documents/secout/%Y-%m-%d/
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
