tweaks to output directory and start/stop scripts

--- a/conf/motion.conf
+++ b/conf/motion.conf
@@ -440,7 +440,7 @@ text_double off
 # Target base directory for pictures and films
 # Recommended to use absolute path. (Default: current working directory)
 # target_dir /var/lib/motion
-target_dir /home/pi/Documents/secout/%Y-%m-%d/
+target_dir /home/pi/Documents/secout
 
 # File path for snapshots (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-snapshot
@@ -449,7 +449,7 @@ target_dir /home/pi/Documents/secout/%Y-%m-%d/
 # File extension .jpg or .ppm is automatically added so do not include this.
 # Note: A symbolic link called lastsnap.jpg created in the target_dir will always
 # point to the latest snapshot, unless snapshot_filename is exactly 'lastsnap'
-snapshot_filename %v-%Y%m%d%H%M%S-snapshot
+snapshot_filename %Y-%m-%d/%v-%Y%m%d%H%M%S-snapshot
 
 # File path for motion triggered images (jpeg or ppm) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S-%q
@@ -458,17 +458,17 @@ snapshot_filename %v-%Y%m%d%H%M%S-snapshot
 # File extension .jpg or .ppm is automatically added so do not include this
 # Set to 'preview' together with best-preview feature enables special naming
 # convention for preview shots. See motion guide for details
-picture_filename %v-%Y%m%d%H%M%S-%q
+picture_filename  %Y-%m-%d/%v-%H:%M:%S-%q
 
 # File path for motion triggered ffmpeg films (movies) relative to target_dir
 # Default: %v-%Y%m%d%H%M%S
 # File extensions(.mpg .avi) are automatically added so do not include them
-movie_filename %v-%Y%m%d%H%M%S
+movie_filename  %Y-%m-%d/%v-%H:%M:%S
 
 # File path for timelapse movies relative to target_dir
 # Default: %Y%m%d-timelapse
 # File extensions(.mpg .avi) are automatically added so do not include them
-timelapse_filename %Y%m%d-timelapse
+timelapse_filename  %Y-%m-%d/%Y%m%d-timelapse
 
 ############################################################
 # Global Network Options
